BOOK-312  - Fixed buttons being misaligned on the betslip

--- a/src/components/BettingDrawers/MarketDrawer/UnmatchedBets.less
+++ b/src/components/BettingDrawers/MarketDrawer/UnmatchedBets.less
@@ -3,8 +3,8 @@
 
 div.unmatched-bets {
   div.buttons {
-    width: 100%;
-    padding-right: 15px;
+    
+    margin: 0px 5px 0px 5px;
 
     &.dimmed {
       opacity: .1;
